# herdr-clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md  herdr-plugin.toml
.github/workflows/: ci.yml  release.yml
scripts/: plugin-build.sh
src/: config.rs  filter.rs  herdr.rs  history.rs  img.rs  main.rs  paths.rs  picker.rs  watcher.rs
