[package]
name = "herdr-clip"
version = "0.4.0"
edition = "2021"

[dependencies]
arboard = "3"
crossterm = "0.28"
fs2 = "0.4"
png = "0.17"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
